methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if(isFacinfWall==true){
        return false
  }else{
    forward();
  }    
  
  if(getGroundColor==Color.green){
        backward();
        return true
      }else{
    backward();
    return false
  }
      
    
}
        
        
        
     
      